[package]
name = "asyncslackbot"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
colored = "1.6"

[dependencies.ws]
version = "0.7"
features = ["ssl"]

[dependencies.reqwest]
version = "*"
features = ["json"]

[dev-dependencies]
async-std = { version = "*", features = ["attribute"] }
